@@ -400,9 +400,15 @@ run_utility(char *argv[]) {
 	char **new_argv;
 	char *p, *arg_buf;
 	int argc;
+	int stdin_pipe[2];
 
-	if (restart_opt == 1)
+	if (restart_opt == 1) {
 		terminate_utility();
+
+		if (pipe(stdin_pipe) != 0)
+			err(1, "Failed to create stdin pipe");
+		close(stdin_pipe[1]);
+	}
 
 	if (shell_opt == 1) {
 		/* run argv[1] with a shell using the leading edge as $0 */
@@ -444,7 +450,7 @@ run_utility(char *argv[]) {
 		/* Set process group so subprocess can be signaled */
 		if (restart_opt == 1) {
 			setpgid(0, getpid());
-			close(STDIN_FILENO);
+			dup2(stdin_pipe[0], STDIN_FILENO);
 		}
 		/* wait up to 1 seconds for each file to become available */
 		for (i=0; i < 10; i++) {
